--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 ### Android ###
 # Gradle files
-.gradle/
+#.gradle/
 build/
 
 # Local configuration file (sdk path, etc)
@@ -31,7 +31,7 @@ render.experimental.xml
 *.keystore
 
 # Google Services (e.g. APIs or Firebase)
-google-services.json
+#google-services.json
 
 # Android Profiling
 *.hprof
